feat: adding all data api call
